Update text size in explanation section and fix spacing in dashboard description

--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,12 @@ b {
 
 
 .explain-app-text li {
-    font-size: 16px;
+    font-size: 20px;
+}
+
+
+.explain-app-text p {
+    font-size: 20px;
 }
 
 /* Interval */
